--- a/producto/productos/equipamiento.html
+++ b/producto/productos/equipamiento.html
@@ -201,9 +201,10 @@
                 <a href="#" class="icon"><i class="fa-brands fa-google" style="color: red;"></i></a>
                 <a href="#" class="icon"><i class="fa-brands fa-twitter" style="color: white;"></i></a>
                 <a href="#" class="icon"><i class="fa-brands fa-instagram" style="color: red;"></i></a>
-                <a href="#" class="icon"><i class="fa-brands fa-github" style="color: white;"></i></a>
+                <a href="https://github.com/Hugoo70/ZoomKarting" class="icon"><i class="fa-brands fa-github" style="color: white;"></i></a>
                 <a href="#" class="icon"><i class="fa-brands fa-twitch"  style="color: red;"></i></a> </p>
             <p>&copy; 2024 ZoomKarting - By 5ºDAM</p>
+            <p> <a href="/contactanos/index.html">Contacto</a> &emsp; Aviso Legal &emsp; <a href="/DondeEstamos/index.html">Mapa</a></p>
             </div>
         </div>
     </footer>
