--- a/DondeEstamos/index.html
+++ b/DondeEstamos/index.html
@@ -25,11 +25,11 @@
         <a class="btn" href="/log-in/index.html"><button>Log-In</button></a>
     </header>
     <div class="info">
-        <h2>Circuitos Karting</h2>
-        <span>Desde ZoomKarting queremos que tengas una experiencia inolvidable y para ello puedes venir a probar nuestros diferentes centros y trazados en <strong>Madrid - La Ermita</strong> y <strong>Las Rozas</strong></span>
+        <h2>Donde Estamos?</h2>
+        <span>En ZoomKarting queremos que tengas una experiencia inolvidable y para ello puedes visitar nuestros diferentes centros y circuitos en <strong>La Ermita</strong> y <strong>Las Rozas</strong>.</span>
     </div>
     <section class="circuitos">
-        <h2>Echa un vistazo a nuestros centros de Karting y sus trazados!</h2>
+        <h2>Echa un vistazo a nuestros centros en Madrid de Karting y sus trazados!</h2>
         <div class="pistas">
                 <div id="Rozas" onclick="mostrarFrame()">
                     <span>Las Rozas</span>
@@ -97,9 +97,10 @@
                 <a href="#" class="icon"><i class="fa-brands fa-google" style="color: red;"></i></a>
                 <a href="#" class="icon"><i class="fa-brands fa-twitter" style="color: white;"></i></a>
                 <a href="#" class="icon"><i class="fa-brands fa-instagram" style="color: red;"></i></a>
-                <a href="#" class="icon"><i class="fa-brands fa-github" style="color: white;"></i></a>
+                <a href="https://github.com/Hugoo70/ZoomKarting" class="icon"><i class="fa-brands fa-github" style="color: white;"></i></a>
                 <a href="#" class="icon"><i class="fa-brands fa-twitch"  style="color: red;"></i></a> </p>
             <p>&copy; 2024 ZoomKarting - By 5ºDAM</p>
+            <p> <a href="/contactanos/index.html">Contacto</a> &emsp; Aviso Legal &emsp; <a href="/DondeEstamos/index.html">Mapa</a></p>
             </div>
         </div>
     </footer>
