Donde Estamos e Inicio

--- a/producto/productos/equipamiento.html
+++ b/producto/productos/equipamiento.html
@@ -34,89 +34,24 @@
         <span>El casco es la marca personal de cada piloto, ademas de llevar su debida protección para ir siempre al limite!</span>
     </div>
     <section class="tarjetaPadre">
+
         <div class="tarjeta">
             <img src="img/casco1.webp" alt="casco1">
-            <div class="contenido">
                 <i class="fa fa-cart-arrow-down" aria-hidden="true"> 1580,90 €</i>
-            </div>
         </div>
-        <div class="tarjeta">
-            <img src="img/casco2.webp" alt="casco2">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 1333,33 €</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/casco3.webp" alt="casco3">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 930,30 €</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/casco4.webp" alt="casco4">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 930,30 €</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/casco5.webp" alt="casco5">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 1333,33 €</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/casco6.webp" alt="casco6">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 1560,90 €</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/casco7.webp" alt="casco7">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 1560,90 €</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/casco8.webp" alt="casco8">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 1455,55 €</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/casco9.webp" alt="casco9">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 780,40€</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/casco10.webp" alt="casco10">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 780,40€</i>
-        </div>
+
         <div class="tarjeta">
             <img src="img/hans1.webp" alt="hans1.">
             <i class="fa fa-cart-arrow-down" aria-hidden="true"> 247,50 €</i>
         </div>
-        <div class="tarjeta">
-            <img src="img/hans2.webp" alt="hans2">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 348,00 €</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/hans3.webp" alt="hans3">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 821,40 €</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/hans4.webp" alt="hans4">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 468,00 €</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/hans5.webp" alt="hans5">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 990,90 €</i>
-        </div>
+
         <div class="tarjeta">
             <img src="img/sotocasco1.webp" alt="sotocasco1">
             <i class="fa fa-cart-arrow-down" aria-hidden="true"> 36,90 €</i>
         </div>
-        <div class="tarjeta">
-            <img src="img/sotocasco2.webp" alt="sotocasco2">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 84,95 €</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/sotocasco3.webp" alt="sotocasco3">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 54,95€</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/sotocasco4.webp" alt="sotocasco4">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 76,50 €</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/sotocasco5.webp" alt="sotocasco5">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 86,70 €</i>
-        </div>
+
     </section>
+    <h2 style="font-size: xx-large; text-align: center;">Proximamente mas...</h2>
 
     <div class="info">
         <h2>MONOS Y GUANTES</h2>
@@ -127,43 +62,14 @@
             <img src="img/mono1.webp" alt="mono1">
             <i class="fa fa-cart-arrow-down" aria-hidden="true"> 385,90 €</i>
         </div>
-        <div class="tarjeta">
-            <img src="img/mono2.webp" alt="mono2">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 385,90 €</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/mono3.webp" alt="mono3">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 385,90 €</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/mono4.webp" alt="mono4">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 385,90 €</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/mono5.webp" alt="mono5">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 385,90 €</i>
-        </div>
+
         <div class="tarjeta">
             <img src="img/guantes1.webp" alt="guantes1">
             <i class="fa fa-cart-arrow-down" aria-hidden="true"> 189,95 €</i>
         </div>
-        <div class="tarjeta">
-            <img src="img/guantes2.webp" alt="guantes2">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 189,95 €</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/guantes3.webp" alt="guantes3">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 189,95 €</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/guantes4.webp" alt="mono4">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 189,95 €</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/guantes5.webp" alt="guantes5">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 189,95 €</i>
-        </div>
+ 
     </section>
+    <h2 style="font-size: xx-large; text-align: center;">Proximamente mas...</h2>
 
     <div class="info">
         <h2>BOTINES</h2>
@@ -174,23 +80,11 @@
             <img src="img/botines1.webp" alt="botines1">
             <i class="fa fa-cart-arrow-down" aria-hidden="true"> 277,10 €</i>
         </div>
-        <div class="tarjeta">
-            <img src="img/botines2.webp" alt="botines2">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 277,10 €</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/botines3.webp" alt="botines3">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 277,10 €</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/botines4.webp" alt="botines4">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 277,10 €</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/botines5.webp" alt="botines5">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 277,10 €</i>
+
         </div>
     </section>
+    <h2 style="font-size: xx-large; text-align: center;">Proximamente mas...</h2>
+
     </main>
     <footer>
         <img src="/img/logo2.png" alt="logo">
