--- a/producto/productos/kart.html
+++ b/producto/productos/kart.html
@@ -40,15 +40,9 @@
                 <i class="fa fa-cart-arrow-down" aria-hidden="true"> 6.020 €</i>
             </div>
         </div>
-        <div class="tarjeta">
-            <img src="img/phoenix.webp" alt="phoenix">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 5.980 €</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/star-cadete.webp" alt="star-cadete">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true"> 4.840 €</i>
-        </div>
+
     </section>
+    <h2 style="font-size: xx-large; text-align: center;">Proximamente mas...</h2>
 
     <div class="info">
         <h2>KARTS ALQUILER</h2>
@@ -59,19 +53,9 @@
             <img src="img/kr3.webp" alt="kr3">
             <i class="fa fa-cart-arrow-down" aria-hidden="true"> 4.620 €</i>
         </div>
-        <div class="tarjeta">
-            <img src="img/SJ1.webp" alt="SJ1">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true">  4.320 €</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/SR3.webp" alt="SR3">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true">  4.350 €</i>
-        </div>
-        <div class="tarjeta">
-            <img src="img/twoone.webp" alt="twoone">
-            <i class="fa fa-cart-arrow-down" aria-hidden="true">  3.960 €</i>
-        </div>
+
     </section>
+    <h2 style="font-size: xx-large; text-align: center;">Proximamente mas...</h2>
 
     <div class="info">
         <h2>KARTS ELECTRICOS</h2>
@@ -83,6 +67,8 @@
             <i class="fa fa-cart-arrow-down" aria-hidden="true">  6.220 €</i>
         </div>
     </section>
+    <h2 style="font-size: xx-large; text-align: center;">Proximamente mas...</h2>
+
     </main>
     <footer>
         <img src="/img/logo2.png" alt="logo">
