--- a/producto/productos/piezas.html
+++ b/producto/productos/piezas.html
@@ -42,78 +42,9 @@
                 <i class="fa fa-cart-arrow-down" aria-hidden="true"> 220,90 €</i>
             </div>
         </div>
-        <div class="tarjeta">
-            <img src="img/Aleron.webp" alt="morro">
-            <div class="contenido">
-                <h2>Aleron delantero</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true">  60,99 €</i>
-            </div>
-        </div>
-        <div class="tarjeta">
-            <img src="img/Morro.webp" alt="SubidaMorro">
-            <div class="contenido">
-                <h2>Morro</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true"> 120,90 €</i>
-            </div>
-        </div>
-        <div class="tarjeta">
-            <img src="img/asiento.webp" alt="thunder">
-            <div class="contenido">
-                <h2>Asiento</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true"> 75.80 €</i>
-            </div>
-        </div>
-        <div class="tarjeta">
-            <img src="img/parachoques.webp" alt="thunder">
-            <div class="contenido">
-                <h2>Parachoques</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true">  110,55 €</i>
-            </div>
-        </div>
-        <div class="tarjeta">
-            <img src="img/volante.webp" alt="thunder">
-            <div class="contenido">
-                <h2>volante</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true">  20.00 €</i>
-            </div>
-        </div>
-        <div class="tarjeta">
-            <img src="img/montura.webp" alt="montura">
-            <div class="contenido">
-                <h2>Bloque Motor</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true">  92,05 €</i>
-            </div>
-        </div>
-        <div class="tarjeta">
-            <img src="img/ruedas.webp" alt="thunder">
-            <div class="contenido">
-                <h2>Ruedas</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true"> 47,87 €</i>
-            </div>
-        </div>
-        <div class="tarjeta">
-            <img src="img/pedales.webp" alt="thunder">
-            <div class="contenido">
-                <h2>Pedales</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true">  85.90 €</i>
-            </div>
-        </div>
-        <div class="tarjeta">
-            <img src="img/shifter.webp" alt="thunder">
-            <div class="contenido">
-                <h2>Shifter</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true"> 96.88 €</i>
-            </div>
-        </div>
-        <div class="tarjeta">
-            <img src="img/FuelLine.webp" alt="FuelLine">
-            <div class="contenido">
-                <h2>Línea de Combustible</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true"> 80.33 €</i>
-            </div>
-        </div>
 
     </section>
+    <h2 style="font-size: xx-large; text-align: center;">Proximamente mas...</h2>
 
     <div class="info">
         <h2>Piezas internas</h2>
@@ -121,76 +52,15 @@
     </div>
     <section class="tarjetaPadre">
         <div class="tarjeta">
-            <img src="img/escape.webp" alt="piñon">
-            <div class="contenido">
-                <h2>Tubo de Escape</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true"> 322,47 €</i>
-            </div>
-        </div>
-        <div class="tarjeta">
             <img src="img/motor.webp" alt="piñon">
             <div class="contenido">
                 <h2>Motor</h2>
                 <i class="fa fa-cart-arrow-down" aria-hidden="true"> 845,54 €</i>
             </div>
         </div>
-        <div class="tarjeta">
-            <img src="img/carburador.webp" alt="carburador">
-            <div class="contenido">
-                <h2>carburador</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true"> 320,77 €</i>
-            </div>
-        </div>
-        <div class="tarjeta">
-            <img src="img/radial.webp" alt="radial">
-            <div class="contenido">
-                <h2>Radial de Freno</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true"> 156,32</i>
-            </div>
-        </div>  
-        <div class="tarjeta">
-            <img src="img/frenos.webp" alt="frenos">
-            <div class="contenido">
-                <h2>Discos de Freno</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true"> 80.62 €</i>
-            </div>
-        </div>        
-        <div class="tarjeta">
-            <img src="img/transmision.webp" alt="transmision">
-            <div class="contenido">
-                <h2>Transmision</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true"> 64,43 €</i>
-            </div>
-        </div>        
-        <div class="tarjeta">
-            <img src="img/BarraTorsion.webp" alt="BarraTorsion">
-            <div class="contenido">
-                <h2>Barra de torsion</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true"> 146,88 €</i>
-            </div>
-        </div>
-        <div class="tarjeta">
-            <img src="img/bujia.webp" alt="bujia">
-            <div class="contenido">
-                <h2>Bujia</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true"> 18,99 €</i>
-            </div>
-        </div>
-        <div class="tarjeta">
-            <img src="img/piñon.webp" alt="piñon">
-            <div class="contenido">
-                <h2>Piñon</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true"> 112,56 €</i>
-            </div>
-        </div>
-        <div class="tarjeta">
-            <img src="img/eje.webp" alt="eje">
-            <div class="contenido">
-                <h2>Eje de dirección</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true"> 423,56 €</i>
-            </div>
-        </div>
+ 
     </section>
+    <h2 style="font-size: xx-large; text-align: center;">Proximamente mas...</h2>
 
     <div class="info">
         <h2>Herramientas</h2>
@@ -204,56 +74,10 @@
                 <i class="fa fa-cart-arrow-down" aria-hidden="true"> 233,33 €</i>
             </div>
         </div>  
-        <div class="tarjeta">
-            <img src="img/colectorKart.webp" alt="colectorKart">
-            <div class="contenido">
-                <h2>Carro colector Kart</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true"> 765,42 €</i>
-            </div>
-        </div>    
-        <div class="tarjeta">
-            <img src="img/tireChanger.webp" alt="tireChanger">
-            <div class="contenido">
-                <h2>Cambiador de neumáticos</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true"> 899,98 €</i>
-            </div>
-        </div>       
-        <div class="tarjeta">
-            <img src="img/pistola.webp" alt="piñon">
-            <div class="contenido">
-                <h2>Pistola de Aire</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true"> 211,10 €</i>
-            </div>
-        </div>        
-        <div class="tarjeta">
-            <img src="img/gasolina.webp" alt="piñon">
-            <div class="contenido">
-                <h2>Tanque de gasolina</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true"> 120,20 €</i>
-            </div>
-        </div>
-        <div class="tarjeta">
-            <img src="img/aceite.webp" alt="piñon">
-            <div class="contenido">
-                <h2>Aceite de motor</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true"> 32,02 €</i>
-            </div>
-        </div>
-        <div class="tarjeta">
-            <img src="img/herramientas.webp" alt="piñon">
-            <div class="contenido">
-                <h2>Caja de herramientas</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true"> 364,56 €</i>
-            </div>
-        </div>
-        <div class="tarjeta">
-            <img src="img/llaveBujia.webp" alt="piñon">
-            <div class="contenido">
-                <h2>Llave de Bujia</h2>
-                <i class="fa fa-cart-arrow-down" aria-hidden="true"> 66,56 €</i>
-            </div>
-        </div>
+  
     </section>
+    <h2 style="font-size: xx-large; text-align: center;">Proximamente mas...</h2>
+
     </main>
     <footer>
         <img src="/img/logo2.png" alt="logo">
