--- a/log-in/index.html
+++ b/log-in/index.html
@@ -24,56 +24,10 @@
         </nav>
         <a class="btn" href="/log-in/index.html"><button>Log-In</button></a>
     </header>
-    <div class="container" id="container">
-        <div class="form-container sign-up">
-            <form>
-                <h1>Crear Cuenta</h1>
-                <div class="social-icons">
-                    <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
-                </div>
-                <span>o usa tu correo para registrarte</span>
-                <input type="text" placeholder="Name">
-                <input type="email" placeholder="Email">
-                <input type="password" placeholder="Password">
-                <button>registrarse</button>
-            </form>
-        </div>
-        <div class="form-container sign-in">
-            <form>
-                <h1>Iniciar Sesión</h1>
-                <div class="social-icons">
-                    <a href="#" class="icon"><i class="fa-brands fa-google-plus-g"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
-                </div>
-                <span>o usa la contraseña de tu correo</span>
-                <input type="email" placeholder="Email">
-                <input type="password" placeholder="Password">
-                <a href="#">Has olvidado tu respuesta?</a>
-                <button>Iniciar Sesión</button>
-            </form>
-        </div>
-        <div class="toggle-container">
-            <div class="toggle">
-                <div class="toggle-panel toggle-left">
-                    <h1>Bienvenido Corredor!</h1>
-                    <p>Ingrese sus datos personales para utilizar todas las funciones del sitio</p>
-                    <button class="hidden" id="login">Iniciar Sesión</button>
-                </div>
-                <div class="toggle-panel toggle-right">
-                    <h1>Bienvenido de nuevo Corredor!</h1>
-                    <p>Regístrese con sus datos personales para utilizar todas las funciones de la web</p>
-                    <button class="hidden" id="register">registrarse</button>
-                </div>
-            </div>
-        </div>
-    </div>
 
+    <h1> Proximamente...</h1>
     <footer>
+
         <img src="/img/logo2.png" alt="logo">
         <hr>
         <div class="cuerpo">
