--- a/inicio/index.html
+++ b/inicio/index.html
@@ -47,19 +47,21 @@
 
 </section>
 
-        <div id="Productos">
-            <div id="imgProd"><img src="img/kart.jpg" width="70%" height="25%" /></div>
-            <h2>Productos</h2>
-            Mire nuestros productos en la siguiente pagina
-           <div id="enl1"> <a href="../producto/index.html" style="color:white;">Productos</a></div>
-        </div>
-        <div id="DondeEstamos">
-            <div id="imgDE"><img src="img/mapa.jpg" width="70%" height="290vh" /></div>
-            <h2>¿Donde Estamos?</h2>
-            Encuentranos en las siguientes direcciones
-             <div id="enl2"> <a href="../DondeEstamos/index.html" style="color:white;">Localizanos</a></div>
+<section class="venta">
+    <div class="productos">
+        <a href="/producto/index.html"><h2>Productos</h2></a>
+        <img src="img/kart.jpg" alt="kart">
+    </div>
 
-        </div>
+    <div class="productos">
+        <a href="/DondeEstamos/index.html"><h2>¿Dónde Estamos?</h2></a>
+        <img src="img/mapa.jpg" alt="Piezas">
+
+    </div>
+
+
+
+</section>
      
         <footer>
             <img src="/img/logo2.png" alt="logo">
